--- a/assets/styles/4.elements/_btn.scss
+++ b/assets/styles/4.elements/_btn.scss
@@ -3,9 +3,7 @@
 ========================================================================== */
 
 @mixin btn-reset() {
-
     appearance: none;
-
     user-select: none;
 }
 
@@ -15,35 +13,31 @@
 
 @mixin btn-primary() {
     display: inline-block;
-
     overflow: hidden;
 
     color: $white;
-
     font-weight: 500;
-
     font-size: 14px;
-
     line-height: 1;
-
     text-decoration: none;
-
     vertical-align: middle;
 
     background-color: $color-purple;
-
     border-radius: 0;
 
     &:hover {
-
         color: $white;
 
         background-color: $color-dark01;
     }
 
     &.is-disabled,
-    &:disabled {}
+    &:disabled {
+        color: #ccc;
+    }
 
-    &.is-active {}
-  
+    &.is-active {
+        color: red;
+    }
+
 }
